--- a/audi.html
+++ b/audi.html
@@ -82,13 +82,12 @@ document creatElement("section");
 					<img src="medias/elements/separator.png" alt="">
 					<div class="nav-works">
 						<ul>
-							<li>Maquette</li>
+							<li>Maquettage</li>
 							<li>Intégration</li>
 							<li>Responsive</li>
 						</ul>
 					</div>
-					<p>Gameblog Magazine est un site traitant de l’actualité du jeux-vidéos. Son design flat permet de mettre en avant les informations importantes.<br>
-					Les différentes couleurs dissossiant chaque section permet à l’oeil de se repérer casiment instantanément.</p>
+					<p>Ce site vitrine à été créé de toute pièce afin de mettre l'accent sur l'aspect technique en créant un site totalement responsive.</p>
 					<div class="nav-visite">
 						<ul>
 							<li><a href="index.html" class="btn-visite">Retour</a></li>
