--- a/audi.html
+++ b/audi.html
@@ -87,7 +87,7 @@ document creatElement("section");
 							<li>Responsive</li>
 						</ul>
 					</div>
-					<p>Ce site vitrine à été créé de toute pièce afin de mettre l'accent sur l'aspect technique en créant un site totalement responsive.</p>
+					<p>Ce site vitrine à été créé afin de mettre l'accent sur l'aspect technique en créant un site totalement responsive.</p>
 					<div class="nav-visite">
 						<ul>
 							<li><a href="index.html" class="btn-visite">Retour</a></li>
