--- a/metalflash.html
+++ b/metalflash.html
@@ -87,8 +87,7 @@ document creatElement("section");
 							<li>E-mailing</li>
 						</ul>
 					</div>
-					<p>Gameblog Magazine est un site traitant de l’actualité du jeux-vidéos. Son design flat permet de mettre en avant les informations importantes.<br>
-					Les différentes couleurs dissossiant chaque section permet à l’oeil de se repérer casiment instantanément.</p>
+					<p>Metal Flash est une création à destination de l'e-mailing avec toutes les contraintes techniques qu'une boite de messagerie impose.</p>
 					<div class="nav-visite">
 						<ul>
 							<li><a href="index.html" class="btn-visite">Retour</a></li>
