--- a/chefenfrance.html
+++ b/chefenfrance.html
@@ -91,7 +91,7 @@ document creatElement("section");
 					<div class="nav-visite">
 						<ul>
 							<li><a href="index.html" class="btn-visite">Retour</a></li>
-							<li><a href="https://exstaz.github.io/portfolio/ChefenFrance/index.html" class="btn-visite">Voir le site</a></li>
+							<li><a href="https://jcbwebdesigner.github.io/portfolio/ChefenFrance/index.html" class="btn-visite">Voir le site</a></li>
 						</ul>
 					</div>
 				</div>
