--- a/gameblog.html
+++ b/gameblog.html
@@ -92,7 +92,7 @@ document creatElement("section");
 					<div class="nav-visite">
 						<ul>
 							<li><a href="index.html" class="btn-visite">Retour</a></li>
-							<li><a href="https://exstaz.github.io/portfolio/GameblogMagazine/index.html" class="btn-visite">Voir le site</a></li>
+							<li><a href="https://jcbwebdesigner.github.io/portfolio/GameblogMagazine/index.html" class="btn-visite">Voir le site</a></li>
 						</ul>
 					</div>
 				</div>
